kubernetes/product/product_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
      version: "v1"
  template:
    metadata:
      labels:
        app: product
        version: "v1"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - product
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: product-app
          image: kamathadityaa/product-istio
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: http
            initialDelaySeconds: 120
