kubernetes/product/product_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: production
  labels:
    app: product
spec:
  selector:
    app: product
  ports:
    - name: http
      port: 80
      targetPort: 8081
