kubernetes/product/product_virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-virtualservice
  namespace: production
spec:
  hosts:
    - product
  http:
    - route:
        - destination:
            host: product
            subset: "v1"
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
